<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:layout_gravity="center"
    tools:context=".OTP_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/enter_code"
        android:textColor="#333348"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/txtmssg"
        android:layout_gravity="center"
        android:layout_width="270dp"
        android:layout_height="35dp"
        android:textAlignment="center"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif"
        android:textColor="#333348"
        android:textSize="15sp" />

    <com.poovam.pinedittextfield.LinePinField
        android:id="@+id/otp"
        app:noOfFields="4"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:inputType="number"
        android:layout_margin="5dp"

        android:textSize="16sp" />

    <Button
        android:id="@+id/verify"
        android:layout_height="44dp"
        android:layout_width="280dp"
        android:text="@string/submit"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/button_bg"/>
    <TextView
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily=""
        android:text="@string/did_not_recieved_the_code"
        android:textColor="#333348"
        android:textSize="15sp"
        android:layout_gravity="center"/>
    <TextView
        android:id="@+id/resend"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily=""
        android:text="@string/re_send"
        android:textColor="#4285F4"
        android:textSize="15sp"
        android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>