<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_gravity="center">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="81dp"
        android:layout_gravity="center"
        android:src="@drawable/verification"
        />

    <TextView
        android:layout_width="211dp"
        android:layout_height="34dp"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="#898A8F"
        android:text="@string/enter_your_mobile_number_we_will_send_you_the_otp_to_verify_later" />

    <LinearLayout
        android:background="@drawable/background"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:layout_width="315dp"
        android:layout_margin="5dp"
        android:layout_height="161dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">
        <TextView
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/ed_txt_bg"
            android:drawableLeft="@drawable/flag"
            android:gravity="center"
            android:text="@string/num"
            android:textAlignment="center"
            android:textColor="#313450"
            android:textSize="19sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />



            <EditText
                android:id="@+id/phonenum"
                android:layout_width="216dp"
                android:layout_height="44dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="20dp"
                android:textStyle="bold"
                android:textSize="19sp"
                android:layout_marginTop="21dp"
                android:background="@drawable/ed_txt_bg"
                android:importantForAutofill="no"
                android:inputType="number"
                tools:ignore="LabelFor" />
        </LinearLayout>
        <Button
            android:id="@+id/submitnum"
            android:layout_width="280.9dp"
            android:layout_height="44dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="17dp"
            android:background="@drawable/button_bg"
            android:text="@string/submit"
            android:textColor="#fff" />

         </LinearLayout>

    </LinearLayout>

</LinearLayout>